--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/page_1"
+        android:id="@+id/uncompleted"
         android:enabled="true"
         android:icon="@drawable/ic_un_done"
         android:title="@string/un_done"/>
     <item
-        android:id="@+id/page_2"
+        android:id="@+id/main"
         android:enabled="true"
         android:icon="@drawable/ic_home"
         android:title="@string/home"/>
     <item
-        android:id="@+id/page_3"
+        android:id="@+id/completed"
         android:enabled="true"
         android:icon="@drawable/ic_done"
         android:title="@string/done"/>
